@@ -26,6 +26,7 @@ https://github.com/elastic/apm-aws-lambda/compare/v1.2.0...main[View commits]
 ===== Features
 - experimental:[] Create proxy transaction with error results if not reported by agent {lambda-pull}315[315]
 - Wait for the final platform report metrics on shutdown {lambda-pull}347[347]
+- Process platform report metrics when extension is lagging {lambda-pull}358[358]
 
 [float]
 [[lambda-1.2.0]]
